test(e2e): add e2e test case (#5)
* test(e2e): add e2e test case

* chore: test case

* chore: test case

* chore(ci): playwright test

* chore: use package

* chore: deps

* fix: reportHTMLUrl

* chore: report html

* chore: e2e test

* chore(e2e): test cases

* chore(ci): add test case

* chore: cross-env

* chore: unused package step

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - 'main'
 
-name: CI Test, Typecheck, Build
+name: CI Test, Typecheck
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-test
   cancel-in-progress: true
@@ -33,26 +33,3 @@ jobs:
         run: pnpm run typecheck
       - name: Run test
         run: pnpm run test
-
-  build:
-    name: Build
-    strategy:
-      matrix:
-        os: [macos-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install pnpm
-        run: npm install -g pnpm@9
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'pnpm'
-      - name: Install Python setuptools
-        run: brew install python-setuptools
-      - name: Install appdmg
-        run: npm install -g appdmg
-      - name: Install dependencies
-        run: pnpm install
-      - name: Run build
-        run: pnpm run build
