--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "debug:w": "electron-vite dev -w --sourcemap --remote-debugging-port=9222",
     "dev:w": "electron-vite dev -w",
     "asar:analyze": "asar extract out/UI\\ TARS-darwin-arm64/UI\\ TARS.app/Contents/Resources/app.asar ./dist/asar",
-    "package": "electron-forge package dist",
+    "package": "electron-forge package",
     "clean": "rimraf dist out",
     "test": "vitest",
+    "pretest:e2e": "npm run build:dist && cross-env CI=e2e npm run package",
+    "test:e2e": "playwright test",
     "build:deps": "pnpm --filter \"!ui-tars-desktop,ui-tars-desktop...\" build && cd packages/visualizer && pnpm install --ignore-workspace",
-    "build": "pnpm run clean && pnpm run build:deps && pnpm run typecheck && cross-env NODE_ENV=production electron-vite build && electron-forge make --enable-logging",
+    "build:dist": "cross-env NODE_ENV=production electron-vite build",
+    "build": "npm run clean && npm run build:deps && npm run typecheck && cross-env NODE_ENV=production electron-vite build && electron-forge make --enable-logging",
+    "make": "electron-forge make",
     "publish:mac-x64": "npm run build && electron-forge publish --arch=x64 --platform=darwin",
     "publish:mac-arm64": "npm run build && electron-forge publish --arch=arm64 --platform=darwin",
     "publish:win32": "npm run build && electron-forge publish --arch=x64 --platform=win32",
@@ -32,9 +36,8 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@computer-use/nut-js": "^4.2.0",
     "@computer-use/node-mac-permissions": "2.2.2",
-    "mac-screen-capture-permissions": "2.1.0",
+    "@computer-use/nut-js": "^4.2.0",
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "@electron/notarize": "^2.3.2",
@@ -50,6 +53,7 @@
     "electron-updater": "^6.1.4",
     "js-yaml": "^4.1.0",
     "lodash-es": "4.17.21",
+    "mac-screen-capture-permissions": "2.1.0",
     "ms": "^2.1.3",
     "openai": "4.73.0",
     "react-use": "^17.6.0",
@@ -95,6 +99,7 @@
     "@electron/fuses": "^1.8.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@playwright/test": "^1.49.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
@@ -107,6 +112,7 @@
     "cross-env": "^7.0.3",
     "electron": "34.0.0",
     "electron-packager-languages": "0.5.0",
+    "electron-playwright-helpers": "^1.7.1",
     "electron-vite": "^2.3.0",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.25.0",
