--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "publish:win32": "npm run build && electron-forge publish --arch=x64 --platform=win32",
     "publish:win32-arm64": "npm run build && electron-forge publish --arch=arm64 --platform=win32",
     "publish": "npm run build && electron-forge publish",
+    "publish:packages": "pnpm changeset:version && pnpm install && changeset tag && pnpm publish -r --no-git-checks --access public",
     "prepare": "husky"
   },
   "dependencies": {
@@ -42,7 +43,7 @@
     "@electron-toolkit/utils": "^3.0.0",
     "@electron/notarize": "^2.3.2",
     "@ui-tars/action-parser": "workspace:*",
-    "@ui-tars/desktop-shared": "workspace:*",
+    "@ui-tars/shared": "workspace:*",
     "async-retry": "^1.3.3",
     "dotenv": "^16.4.7",
     "electron-debug": "^3.2.0",
@@ -81,6 +82,7 @@
   "devDependencies": {
     "@chakra-ui/react": "2.10.4",
     "@chakra-ui/theme-tools": "^2.2.6",
+    "@changesets/cli": "^2.27.11",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@electron-forge/cli": "^7.6.0",
