chore(ci): add coverage (#13)
* chore: add mobile actions

* chore(ci): add coverage

* chore: coverage

* chore: lcov coverage

* docs: readme

* chore: lcov

* chore: codecov

* chore: token

* chore: coverage v8

* chore: env token

* chore: env

* chore: token

* chore: provider

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,4 +32,12 @@ jobs:
       - name: Run typecheck
         run: pnpm run typecheck
       - name: Run test
-        run: pnpm run test
+        run: pnpm run coverage
+      - name: Upload coverage data
+        uses: codecov/codecov-action@v5
+        with:
+          fail_ci_if_error: true
+          disable_search: true
+          files: ./coverage/lcov.info
+          token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: false
