--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "package": "electron-forge package",
     "clean": "rimraf dist out",
     "test": "vitest",
+    "coverage": "vitest run --coverage",
     "pretest:e2e": "npm run build:dist && cross-env CI=e2e npm run package",
     "test:e2e": "playwright test",
     "build:deps": "pnpm --filter \"!ui-tars-desktop,ui-tars-desktop...\" build && cd packages/visualizer && pnpm install --ignore-workspace",
@@ -109,6 +110,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/coverage-istanbul": "^3.0.3",
     "clsx": "2.1.1",
     "copy-to-clipboard": "3.3.3",
     "cross-env": "^7.0.3",
