--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@ui-tars/action-parser": "workspace:*",
     "@ui-tars/shared": "workspace:*",
     "async-retry": "^1.3.3",
+    "big.js": "^6.2.2",
     "dotenv": "^16.4.7",
     "electron-debug": "^3.2.0",
     "electron-devtools-installer": "^3.2.0",
