--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui-tars-desktop",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "packageManager": "pnpm@9.10.0",
   "description": "Control your computer with Agent",
@@ -38,11 +38,11 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@computer-use/mac-screen-capture-permissions": "^1.0.2",
     "@computer-use/node-mac-permissions": "2.2.2",
     "@computer-use/nut-js": "^4.2.0",
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
-    "@electron/notarize": "^2.3.2",
     "@ui-tars/action-parser": "workspace:*",
     "@ui-tars/shared": "workspace:*",
     "async-retry": "^1.3.3",
@@ -56,7 +56,6 @@
     "electron-updater": "^6.1.4",
     "js-yaml": "^4.1.0",
     "lodash-es": "4.17.21",
-    "mac-screen-capture-permissions": "2.1.0",
     "ms": "^2.1.3",
     "openai": "4.73.0",
     "react-use": "^17.6.0",
