chore(ci): auto license header

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.2",
   "private": true,
   "packageManager": "pnpm@9.10.0",
-  "description": "Control your computer with Agent",
+  "description": "A GUI Agent application based on UI-TARS(Vision-Lanuage Model) that allows you to control your computer using natural language.",
   "main": "./dist/main/main.js",
-  "author": "jinxin001",
+  "author": "ByteDance",
   "scripts": {
     "commit": "oco",
     "format": "prettier --write .",
