fix(agent): abort not break immediately (#49)
* chore: call_user action

* fix(agent): abort not break immediately

* fix(ui): disable logo dragged

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -17,10 +17,10 @@
   "typesVersions": {
     "*": {
       "types": [
-        "./dist/types/index.d.ts"
+        "./src/types/index.ts"
       ],
       "*": [
-        "./dist/*"
+        "./src/*"
       ]
     }
   },
@@ -38,7 +38,8 @@
     "registry": "https://registry.npmjs.org/"
   },
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "dependencies": {},
   "devDependencies": {
