--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@electron-toolkit/utils": "^3.0.0",
     "@ui-tars/action-parser": "workspace:*",
     "@ui-tars/shared": "workspace:*",
+    "@ui-tars/utio": "workspace:*",
     "async-retry": "^1.3.3",
     "big.js": "^6.2.2",
     "dotenv": "^16.4.7",
