--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui-tars-desktop",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "private": true,
   "packageManager": "pnpm@9.10.0",
   "description": "A GUI Agent application based on UI-TARS(Vision-Lanuage Model) that allows you to control your computer using natural language.",
@@ -41,7 +41,6 @@
     "@computer-use/mac-screen-capture-permissions": "^1.0.2",
     "@computer-use/node-mac-permissions": "2.2.2",
     "@computer-use/nut-js": "^4.2.0",
-    "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "@ui-tars/action-parser": "workspace:*",
     "@ui-tars/shared": "workspace:*",
@@ -53,11 +52,11 @@
     "electron-log": "5.2.4",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.0",
-    "electron-updater": "^6.1.4",
     "js-yaml": "^4.1.0",
     "ms": "^2.1.3",
     "openai": "4.73.0",
     "sharp": "0.33.3",
+    "update-electron-app": "^3.1.0",
     "zustand": "^5.0.0",
     "zutron": "^0.4.0"
   },
@@ -79,6 +78,7 @@
   },
   "devDependencies": {
     "react-use": "^17.6.0",
+    "@electron-toolkit/preload": "^3.0.1",
     "@chakra-ui/react": "2.10.4",
     "@chakra-ui/theme-tools": "^2.2.6",
     "@changesets/cli": "^2.27.11",
