--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "electron-log": "5.2.4",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.0",
+    "i18next": "^24.2.2",
     "js-yaml": "^4.1.0",
     "ms": "^2.1.3",
     "openai": "4.73.0",
@@ -78,8 +79,6 @@
     }
   },
   "devDependencies": {
-    "react-use": "^17.6.0",
-    "@electron-toolkit/preload": "^3.0.1",
     "@chakra-ui/react": "2.10.4",
     "@chakra-ui/theme-tools": "^2.2.6",
     "@changesets/cli": "^2.27.11",
@@ -97,6 +96,7 @@
     "@electron-forge/publisher-github": "^7.6.1",
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
     "@electron-toolkit/eslint-config-ts": "^2.0.0",
+    "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/asar": "^3.2.18",
     "@electron/fuses": "^1.8.0",
@@ -133,8 +133,10 @@
     "qs": "6.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.3.0",
     "react-router": "^7.1.1",
+    "react-use": "^17.6.0",
     "rimraf": "^6.0.1",
     "sass-embedded": "^1.83.1",
     "tailwind-merge": "2.5.5",
