fix(actionParser): no action text return null not error (#73)
* fix(actionParser): no action text return null not error

* fix(share): types

* chore(ci): add benchmark

* fix(ci): build bug

* refactor(shared): only export @ui-tars/shared/{part} namespace

* chore(ci): workflows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,11 @@ env:
   NODE_OPTIONS: --max-old-space-size=8192
   HUSKY: 0
 
+permissions:
+  id-token: write
+  contents: write
+  attestations: write
+
 jobs:
   publish_on_mac:
     strategy:
