--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -14,6 +14,11 @@ env:
   NODE_OPTIONS: --max-old-space-size=8192
   HUSKY: 0
 
+permissions:
+  id-token: write
+  contents: read
+  attestations: read
+
 jobs:
   e2e:
     name: E2E
