--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "package": "electron-forge package",
     "clean": "rimraf dist out",
     "test": "vitest",
+    "test:bench": "vitest bench",
     "coverage": "vitest run --coverage",
     "pretest:e2e": "npm run build:dist && cross-env CI=e2e npm run package",
     "test:e2e": "playwright test",
@@ -78,8 +79,6 @@
     }
   },
   "devDependencies": {
-    "react-use": "^17.6.0",
-    "@electron-toolkit/preload": "^3.0.1",
     "@chakra-ui/react": "2.10.4",
     "@chakra-ui/theme-tools": "^2.2.6",
     "@changesets/cli": "^2.27.11",
@@ -97,6 +96,7 @@
     "@electron-forge/publisher-github": "^7.6.1",
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
     "@electron-toolkit/eslint-config-ts": "^2.0.0",
+    "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/asar": "^3.2.18",
     "@electron/fuses": "^1.8.0",
@@ -135,6 +135,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-router": "^7.1.1",
+    "react-use": "^17.6.0",
     "rimraf": "^6.0.1",
     "sass-embedded": "^1.83.1",
     "tailwind-merge": "2.5.5",
