fix(permission): macOS permissions updates are not real-time (#76)
* fix(permission): macOS permissions updates are not real-time

* test(permissions): add test case

* test(ci): macos

* chore(ci): macos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,10 @@
     {
       "language": "javascriptreact",
       "mapTo": "javascript"
+    },
+    {
+      "language": "*",
+      "template": []
     }
   ]
 }
