--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui-tars-desktop",
-  "version": "0.0.4-beta.1",
+  "version": "0.0.4",
   "private": true,
   "packageManager": "pnpm@9.10.0",
   "description": "A GUI Agent application based on UI-TARS(Vision-Lanuage Model) that allows you to control your computer using natural language.",
@@ -114,7 +114,7 @@
     "clsx": "2.1.1",
     "copy-to-clipboard": "3.3.3",
     "cross-env": "^7.0.3",
-    "electron": "34.0.0",
+    "electron": "34.1.1",
     "electron-packager-languages": "0.5.0",
     "electron-playwright-helpers": "^1.7.1",
     "electron-vite": "^2.3.0",
