--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test:e2e": "playwright test",
     "build:deps": "pnpm --filter \"!ui-tars-desktop,ui-tars-desktop...\" build && cd packages/visualizer && pnpm install --ignore-workspace",
     "build:dist": "cross-env NODE_ENV=production electron-vite build",
-    "build": "npm run clean && npm run build:deps && npm run typecheck && cross-env NODE_ENV=production electron-vite build && electron-forge make --enable-logging",
+    "build": "npm run clean && npm run typecheck && cross-env NODE_ENV=production electron-vite build && electron-forge make --enable-logging",
     "make": "electron-forge make",
     "publish:mac-x64": "npm run build && electron-forge publish --arch=x64 --platform=darwin",
     "publish:mac-arm64": "npm run build && electron-forge publish --arch=arm64 --platform=darwin",
