--- a/packages/action-parser/package.json
+++ b/packages/action-parser/package.json
@@ -30,6 +30,7 @@
     "dist"
   ],
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
