--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -44,6 +44,7 @@
   ],
   "license": "Apache-2.0",
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
   "files": [
