--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -6,6 +6,7 @@
     "src/renderer/src/**/*.tsx",
     "src/main/store/types.ts",
     "src/main/shared/**/*.ts",
+    "src/main/ipcRoutes/index.ts",
     "src/preload/*.d.ts"
   ],
   "compilerOptions": {
