--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui-tars-desktop",
-  "version": "0.0.4",
+  "version": "0.0.5-beta.1",
   "private": true,
   "packageManager": "pnpm@9.10.0",
   "description": "A GUI Agent application based on UI-TARS(Vision-Lanuage Model) that allows you to control your computer using natural language.",
@@ -46,6 +46,7 @@
     "@ui-tars/action-parser": "workspace:*",
     "@ui-tars/shared": "workspace:*",
     "@ui-tars/utio": "workspace:*",
+    "@ui-tars/electron-ipc": "workspace:*",
     "async-retry": "^1.3.3",
     "big.js": "^6.2.2",
     "dotenv": "^16.4.7",
@@ -59,8 +60,7 @@
     "openai": "4.73.0",
     "sharp": "0.33.3",
     "update-electron-app": "^3.1.0",
-    "zustand": "^5.0.0",
-    "zutron": "^0.4.0"
+    "zustand": "^5.0.0"
   },
   "peerDependencies": {
     "esbuild-register": "*",
@@ -114,7 +114,7 @@
     "clsx": "2.1.1",
     "copy-to-clipboard": "3.3.3",
     "cross-env": "^7.0.3",
-    "electron": "34.0.2",
+    "electron": "34.1.1",
     "electron-packager-languages": "0.5.0",
     "electron-playwright-helpers": "^1.7.1",
     "electron-vite": "^2.3.0",
