--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-tars/cli",
-  "version": "1.1.0",
+  "version": "1.2.0-beta.0",
   "description": "CLI for UI-TARS",
   "repository": {
     "type": "git",
