--- a/packages/utio/package.json
+++ b/packages/utio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-tars/utio",
-  "version": "1.0.0",
+  "version": "1.1.0-beta.0",
   "description": "UTIO (UI-TARS Insights and Observation)",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
