--- a/packages/action-parser/package.json
+++ b/packages/action-parser/package.json
@@ -22,8 +22,7 @@
     "dev": "tsup --watch",
     "prepare": "npm run build",
     "build": "tsup",
-    "test": "vitest",
-    "prepack": "npm run build"
+    "test": "vitest"
   },
   "license": "Apache-2.0",
   "files": [
