--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -32,8 +32,7 @@
     "dev": "tsup --watch",
     "prepare": "npm run build",
     "build": "tsup",
-    "test": "vitest",
-    "prepack": "npm run build"
+    "test": "vitest"
   },
   "license": "Apache-2.0",
   "files": [
