--- a/packages/utio/package.json
+++ b/packages/utio/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "prepare": "npm run build",
     "dev": "tsup --watch",
-    "build": "tsup",
-    "prepack": "npm run build"
+    "build": "tsup"
   },
   "keywords": [
     "UI-TARS"
