--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -45,12 +45,14 @@
   "dependencies": {
     "openai": "4.73.0",
     "jimp": "1.6.0",
+    "async-retry": "1.3.3",
     "@ui-tars/shared": "workspace:*",
     "@ui-tars/action-parser": "workspace:*"
   },
   "devDependencies": {
     "tsup": "^8.3.5",
     "typescript": "^5.7.2",
-    "vitest": "^3.0.2"
+    "vitest": "^3.0.2",
+    "@types/async-retry": "1.4.9"
   }
 }
