--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -21,11 +21,18 @@
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
     },
     "./core": {
       "import": "./dist/core.mjs",
-      "require": "./dist/core.js"
+      "require": "./dist/core.js",
+      "types": "./dist/core.d.ts"
+    },
+    "./constants": {
+      "import": "./dist/constants.mjs",
+      "require": "./dist/constants.js",
+      "types": "./dist/constants.d.ts"
     }
   },
   "scripts": {
