--- a/packages/operators/nut-js/package.json
+++ b/packages/operators/nut-js/package.json
@@ -35,12 +35,15 @@
   },
   "dependencies": {
     "@ui-tars/shared": "workspace:*",
-    "@ui-tars/sdk": "workspace:*",
     "big.js": "^6.2.2",
     "jimp": "1.6.0",
     "@computer-use/nut-js": "^4.2.0"
   },
+  "peerDependencies": {
+    "@ui-tars/sdk": "workspace:*"
+  },
   "devDependencies": {
+    "@ui-tars/sdk": "workspace:*",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2",
     "vitest": "^3.0.2",
