--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,8 +33,8 @@
   },
   "dependencies": {
     "commander": "^13.1.0",
-    "inquirer": "^12.4.1",
     "jimp": "1.6.0",
+    "@clack/prompts": "^0.10.0",
     "@ui-tars/operator-nut-js": "workspace:*",
     "@ui-tars/sdk": "workspace:*"
   },
