--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -21,18 +21,15 @@
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js"
     },
     "./core": {
       "import": "./dist/core.mjs",
-      "require": "./dist/core.js",
-      "types": "./dist/core.d.ts"
+      "require": "./dist/core.js"
     },
     "./constants": {
       "import": "./dist/constants.mjs",
-      "require": "./dist/constants.js",
-      "types": "./dist/constants.d.ts"
+      "require": "./dist/constants.js"
     }
   },
   "scripts": {
