--- a/packages/visualizer/package.json
+++ b/packages/visualizer/package.json
@@ -54,6 +54,7 @@
     "@types/node": "^18.0.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/clean-css": "4.2.11",
     "antd": "5.21.6",
     "console-browserify": "1.2.0",
     "dayjs": "1.11.11",
@@ -71,7 +72,8 @@
     "rimraf": "~3.0.2",
     "tsx": "4.19.2",
     "typescript": "~5.0.4",
-    "zustand": "4.5.2"
+    "zustand": "4.5.2",
+    "clean-css": "5.3.3"
   },
   "sideEffects": [
     "**/*.css",
