--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -57,6 +57,11 @@
     "tsup": "^8.3.5",
     "typescript": "^5.7.2",
     "vitest": "^3.0.2",
-    "@types/async-retry": "1.4.9"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "vitest-browser-react": "^0.1.1",
+    "@types/async-retry": "1.4.9",
+    "happy-dom": "^17.1.1"
   }
 }
