feat: add ui-tars GUI Agent SDK (#110)
* fix(bug): ensure screen capture uses primary display source (#117)

* fix: ensure screen capture uses primary display source

* test: add device.test.ts

* test: update device.test.ts

* tweak(ux): close Settings Window after saving (#115)

* feat(visualizer): reduce html report size (close: #118) (#119)

* feat(visualizer): reduce html report size

* feat(visualizer): remove midscene_report_tpl element and minify css & js code

* feat(visualizer): externals common lib

* feat: init sdk

* chore: operators

* feat: sdk agent

* feat: sdk ready

* chore: add publish beta shell

* feat: packages changelog

* release: publish beta packages

* chore: remove pre pack

* refactor(agent): use @ui-tars/sdk refactor

* chore: type

* chore: beta shell

* chore: add utio

* chore: remove app agent code

* release: publish beta packages

* chore: version

* fix: async_hooks

* chore: unsafe

* chore: forge

* fix(build): front end bundle server code

* release: publish beta packages

* chore: status

* fix(operator): scaleFactor

* fix: scaleFactor

* chore: unused

* fix: model retry bug

* fix: som bug

* fix: windows screenshot size

* fix: resize screenshot

* fix: scale factor

* release: publish beta packages

* fix: sdk add parsedPrediction

* chore: utio version

* release: publish beta packages

* fix: useConfig bug

* chore: peer deps

* fix: model custom

* chore: typo

* fix(sdk): async_hooks store get undefined multiple sdk versions in the project

* fix: screen sources primary

* chore: ci test

* chore: replace inquirer to clack

* chore: date.now

* feat: support pass InstanceType model

* release: publish beta packages

* fix: operator bug

* release: publish beta packages

* chore: add instruction

* chore: sdk add maxLoopCount

* chore: simplify sdk

* refactor: useConfig to useContext

* release: publish beta packages

* chore: useContext

* fix: global this

* chore: browser

* chore: add test cases

* feat: init sd

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-tars/shared",
-  "version": "1.1.0",
+  "version": "1.2.0-beta.6",
   "description": "Shared types for UI-TARS",
   "repository": {
     "type": "git",
@@ -36,8 +36,7 @@
   "scripts": {
     "prepare": "npm run build",
     "dev": "tsup --watch",
-    "build": "tsup",
-    "prepack": "npm run build"
+    "build": "tsup"
   },
   "keywords": [
     "UI-TARS"
