--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui-tars-desktop",
-  "version": "0.0.5",
+  "version": "0.0.6-beta.1",
   "private": true,
   "packageManager": "pnpm@9.10.0",
   "description": "A GUI Agent application based on UI-TARS(Vision-Lanuage Model) that allows you to control your computer using natural language.",
@@ -36,6 +36,7 @@
     "publish:win32-arm64": "npm run build && electron-forge publish --arch=arm64 --platform=win32",
     "publish": "npm run build && electron-forge publish",
     "publish:packages": "bash scripts/release-pkgs.sh",
+    "publish-beta:packages": "bash scripts/release-beta-pkgs.sh",
     "prepare": "husky"
   },
   "dependencies": {
@@ -43,12 +44,12 @@
     "@computer-use/node-mac-permissions": "2.2.2",
     "@computer-use/nut-js": "^4.2.0",
     "@electron-toolkit/utils": "^3.0.0",
+    "@ui-tars/sdk": "workspace:*",
+    "@ui-tars/operator-nut-js": "workspace:*",
     "@ui-tars/action-parser": "workspace:*",
     "@ui-tars/shared": "workspace:*",
     "@ui-tars/utio": "workspace:*",
     "@ui-tars/electron-ipc": "workspace:*",
-    "async-retry": "^1.3.3",
-    "big.js": "^6.2.2",
     "dotenv": "^16.4.7",
     "electron-debug": "^3.2.0",
     "electron-devtools-installer": "^3.2.0",
@@ -57,7 +58,6 @@
     "electron-store": "^10.0.0",
     "js-yaml": "^4.1.0",
     "ms": "^2.1.3",
-    "openai": "4.73.0",
     "sharp": "0.33.3",
     "update-electron-app": "^3.1.0",
     "zustand": "^5.0.0"
@@ -127,7 +127,6 @@
     "lint-staged": "^14.0.1",
     "markdown-it": "14.1.0",
     "medium-zoom": "1.1.0",
-    "mitt": "^3.0.1",
     "opencommit": "^3.2.5",
     "prettier": "^3.3.2",
     "qs": "6.13.1",
