--- a/packages/action-parser/package.json
+++ b/packages/action-parser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-tars/action-parser",
-  "version": "1.1.0",
+  "version": "1.2.0-beta.6",
   "description": "Action parser SDK for UI-TARS",
   "repository": {
     "type": "git",
@@ -22,8 +22,7 @@
     "dev": "tsup --watch",
     "prepare": "npm run build",
     "build": "tsup",
-    "test": "vitest",
-    "prepack": "npm run build"
+    "test": "vitest"
   },
   "license": "Apache-2.0",
   "files": [
