--- a/packages/electron-ipc/package.json
+++ b/packages/electron-ipc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-tars/electron-ipc",
-  "version": "1.1.0",
+  "version": "1.2.0-beta.6",
   "description": "Type-safe Electron inter-process communication for UI-TARS",
   "repository": {
     "type": "git",
@@ -31,8 +31,7 @@
     "dev": "tsup --watch",
     "prepare": "npm run build",
     "build": "tsup",
-    "test": "vitest",
-    "prepack": "npm run build"
+    "test": "vitest"
   },
   "license": "Apache-2.0",
   "files": [
