--- a/packages/utio/package.json
+++ b/packages/utio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-tars/utio",
-  "version": "1.0.0",
+  "version": "1.2.0-beta.6",
   "description": "UTIO (UI-TARS Insights and Observation)",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -8,8 +8,7 @@
   "scripts": {
     "prepare": "npm run build",
     "dev": "tsup --watch",
-    "build": "tsup",
-    "prepack": "npm run build"
+    "build": "tsup"
   },
   "keywords": [
     "UI-TARS"
