--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-tars/cli",
-  "version": "1.2.0-beta.9",
+  "version": "1.2.0-beta.11",
   "description": "CLI for UI-TARS",
   "repository": {
     "type": "git",
@@ -34,12 +34,15 @@
   "dependencies": {
     "commander": "^13.1.0",
     "jimp": "1.6.0",
+    "js-yaml": "^4.1.0",
     "@clack/prompts": "^0.10.0",
     "@ui-tars/operator-nut-js": "workspace:*",
-    "@ui-tars/sdk": "workspace:*"
+    "@ui-tars/sdk": "workspace:*",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "tsup": "^8.3.5",
+    "@types/js-yaml": "^4.0.9",
     "typescript": "^5.7.2",
     "vitest": "^3.0.2"
   }
