--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,12 @@
   "$schema": "https://unpkg.com/@changesets/config@3.0.5/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": false,
-  "fixed": [],
+  "fixed": [
+    [
+      "@ui-tars/*",
+      "!@ui-tars/visualizer"
+    ]
+  ],
   "linked": [],
   "access": "restricted",
   "baseBranch": "main",
