refactor(sdk): screenshot only return base64 and scaleFactor

--- a/packages/operators/browserbase/package.json
+++ b/packages/operators/browserbase/package.json
@@ -36,8 +36,7 @@
   "dependencies": {
     "@ui-tars/shared": "workspace:*",
     "@browserbasehq/stagehand": "^1.13.0",
-    "big.js": "^6.2.2",
-    "jimp": "1.6.0"
+    "big.js": "^6.2.2"
   },
   "peerDependencies": {
     "@ui-tars/sdk": "workspace:*"
