--- a/packages/operators/browserbase/package.json
+++ b/packages/operators/browserbase/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-tars/operator-browserbase",
-  "version": "1.2.0-beta.17",
+  "version": "1.2.0-beta.21",
   "description": "Operator Browserbase SDK for UI-TARS",
   "repository": {
     "type": "git",
@@ -36,8 +36,7 @@
   "dependencies": {
     "@ui-tars/shared": "workspace:*",
     "@browserbasehq/stagehand": "^1.13.0",
-    "big.js": "^6.2.2",
-    "jimp": "1.6.0"
+    "big.js": "^6.2.2"
   },
   "peerDependencies": {
     "@ui-tars/sdk": "workspace:*"
