--- a/packages/electron-ipc/package.json
+++ b/packages/electron-ipc/package.json
@@ -17,12 +17,12 @@
   ],
   "exports": {
     "./main": {
-      "types": "./src/main/index.ts",
+      "types": "./dist/main/index.d.ts",
       "import": "./dist/main/index.mjs",
       "require": "./dist/main/index.js"
     },
     "./renderer": {
-      "types": "./src/renderer/index.ts",
+      "types": "./dist/renderer/index.d.ts",
       "import": "./dist/renderer/index.mjs",
       "require": "./dist/renderer/index.js"
     }
