--- a/packages/electron-ipc/tsconfig.json
+++ b/packages/electron-ipc/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "node10",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
