--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,9 +17,10 @@
     "UI-TARS"
   ],
   "scripts": {
-    "dev": "tsup --watch",
     "prepare": "npm run build",
-    "build": "tsup",
+    "dev": "rslib build --watch",
+    "build": "rslib build",
+    "build:watch": "rslib build --watch",
     "test": "vitest"
   },
   "license": "Apache-2.0",
@@ -41,7 +42,8 @@
     "node-fetch": "^2.7.0"
   },
   "devDependencies": {
-    "tsup": "^8.3.5",
+    "@rslib/core": "^0.5.4",
+    "@ui-tars/configs": "workspace:*",
     "@types/js-yaml": "^4.0.9",
     "typescript": "^5.7.2",
     "vitest": "^3.0.2"
