--- a/packages/operators/browserbase/package.json
+++ b/packages/operators/browserbase/package.json
@@ -20,9 +20,10 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "dev": "tsup --watch",
+    "dev": "rslib build --watch",
+    "build": "rslib build",
+    "build:watch": "rslib build --watch",
     "prepare": "npm run build",
-    "build": "tsup",
     "test": "vitest"
   },
   "license": "Apache-2.0",
@@ -43,7 +44,8 @@
   },
   "devDependencies": {
     "@ui-tars/sdk": "workspace:*",
-    "tsup": "^8.3.5",
+    "@ui-tars/configs": "workspace:*",
+    "@rslib/core": "^0.5.4",
     "typescript": "^5.7.2",
     "vitest": "^3.0.2",
     "@types/big.js": "^6.2.2"
