--- a/apps/ui-tars-desktop/package.json
+++ b/apps/ui-tars-desktop/package.json
@@ -2,9 +2,9 @@
   "name": "ui-tars-desktop",
   "version": "0.0.7-beta.1",
   "private": true,
+  "main": "./dist/main/main.js",
   "packageManager": "pnpm@9.10.0",
   "description": "A GUI Agent application based on UI-TARS(Vision-Lanuage Model) that allows you to control your computer using natural language.",
-  "main": "./dist/main/main.js",
   "author": "ByteDance",
   "scripts": {
     "commit": "oco",
@@ -36,31 +36,7 @@
     "publish:win32-arm64": "npm run build && electron-forge publish --arch=arm64 --platform=win32",
     "publish": "npm run build && electron-forge publish",
     "publish:packages": "bash scripts/release-pkgs.sh",
-    "publish-beta:packages": "bash scripts/release-beta-pkgs.sh",
-    "prepare": "husky"
-  },
-  "dependencies": {
-    "@computer-use/mac-screen-capture-permissions": "^1.0.2",
-    "@computer-use/node-mac-permissions": "2.2.2",
-    "@computer-use/nut-js": "^4.2.0",
-    "@electron-toolkit/utils": "^3.0.0",
-    "@ui-tars/sdk": "workspace:*",
-    "@ui-tars/operator-nut-js": "workspace:*",
-    "@ui-tars/action-parser": "workspace:*",
-    "@ui-tars/shared": "workspace:*",
-    "@ui-tars/utio": "workspace:*",
-    "@ui-tars/electron-ipc": "workspace:*",
-    "dotenv": "^16.4.7",
-    "electron-debug": "^3.2.0",
-    "electron-devtools-installer": "^3.2.0",
-    "electron-log": "5.2.4",
-    "electron-squirrel-startup": "^1.0.1",
-    "electron-store": "^10.0.0",
-    "js-yaml": "^4.1.0",
-    "ms": "^2.1.3",
-    "sharp": "0.33.3",
-    "update-electron-app": "^3.1.0",
-    "zustand": "^5.0.0"
+    "publish-beta:packages": "bash scripts/release-beta-pkgs.sh"
   },
   "peerDependencies": {
     "esbuild-register": "*",
@@ -78,10 +54,12 @@
       "optional": true
     }
   },
+  "dependencies": {
+    "@ui-tars/shared": "workspace:*",
+    "@ui-tars/utio": "workspace:*",
+    "@ui-tars/electron-ipc": "workspace:*"
+  },
   "devDependencies": {
-    "@changesets/cli": "^2.27.11",
-    "@commitlint/cli": "^19.6.1",
-    "@commitlint/config-conventional": "^19.6.0",
     "@electron-forge/cli": "^7.7.0",
     "@electron-forge/maker-deb": "^7.7.0",
     "@electron-forge/maker-dmg": "^7.7.0",
