--- a/apps/ui-tars/package.json
+++ b/apps/ui-tars/package.json
@@ -34,9 +34,7 @@
     "publish:mac-arm64": "npm run build && electron-forge publish --arch=arm64 --platform=darwin",
     "publish:win32": "npm run build && electron-forge publish --arch=x64 --platform=win32",
     "publish:win32-arm64": "npm run build && electron-forge publish --arch=arm64 --platform=win32",
-    "publish": "npm run build && electron-forge publish",
-    "publish:packages": "bash scripts/release-pkgs.sh",
-    "publish-beta:packages": "bash scripts/release-beta-pkgs.sh"
+    "publish": "npm run build && electron-forge publish"
   },
   "peerDependencies": {
     "esbuild-register": "*",
