--- a/apps/ui-tars/package.json
+++ b/apps/ui-tars/package.json
@@ -53,9 +53,29 @@
     }
   },
   "dependencies": {
+    "electron": "34.1.1",
+    "source-map-support": "^0.5.21",
+    "@computer-use/mac-screen-capture-permissions": "^1.0.2",
+    "@computer-use/node-mac-permissions": "2.2.2",
+    "@computer-use/nut-js": "^4.2.0",
+    "@electron-toolkit/utils": "^3.0.0",
+    "@ui-tars/sdk": "workspace:*",
+    "@ui-tars/operator-nut-js": "workspace:*",
+    "@ui-tars/action-parser": "workspace:*",
     "@ui-tars/shared": "workspace:*",
     "@ui-tars/utio": "workspace:*",
-    "@ui-tars/electron-ipc": "workspace:*"
+    "@ui-tars/electron-ipc": "workspace:*",
+    "dotenv": "^16.4.7",
+    "electron-debug": "^3.2.0",
+    "electron-devtools-installer": "^3.2.0",
+    "electron-log": "5.2.4",
+    "electron-squirrel-startup": "^1.0.1",
+    "electron-store": "^10.0.0",
+    "js-yaml": "^4.1.0",
+    "ms": "^2.1.3",
+    "sharp": "^0.33.5",
+    "update-electron-app": "^3.1.0",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.7.0",
