--- a/apps/ui-tars/package.json
+++ b/apps/ui-tars/package.json
@@ -53,11 +53,13 @@
     }
   },
   "dependencies": {
-    "electron": "34.1.1",
-    "source-map-support": "^0.5.21",
+    "sharp": "0.33.3",
     "@computer-use/mac-screen-capture-permissions": "^1.0.2",
     "@computer-use/node-mac-permissions": "2.2.2",
-    "@computer-use/nut-js": "^4.2.0",
+    "@computer-use/nut-js": "^4.2.0"
+  },
+  "devDependencies": {
+    "source-map-support": "^0.5.21",
     "@electron-toolkit/utils": "^3.0.0",
     "@ui-tars/sdk": "workspace:*",
     "@ui-tars/operator-nut-js": "workspace:*",
@@ -73,11 +75,8 @@
     "electron-store": "^10.0.0",
     "js-yaml": "^4.1.0",
     "ms": "^2.1.3",
-    "sharp": "^0.33.5",
     "update-electron-app": "^3.1.0",
-    "zustand": "^5.0.0"
-  },
-  "devDependencies": {
+    "zustand": "^5.0.0",
     "@electron-forge/cli": "^7.7.0",
     "@electron-forge/maker-dmg": "^7.7.0",
     "@electron-forge/maker-pkg": "^7.7.0",
