--- a/examples/operator-browserbase/package.json
+++ b/examples/operator-browserbase/package.json
@@ -24,7 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "jimp": "^1.6.0",
-    "sharp": "^0.33.5",
+    "sharp": "0.33.3",
     "usehooks-ts": "^2.16.0",
     "zod": "^3.22.4"
   },
