--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Run typecheck
-        run: pnpm run typecheck
+        run: cd apps/ui-tars && pnpm run typecheck
       - name: Run test
         run: pnpm run coverage
       - name: Upload coverage data
@@ -48,19 +48,3 @@ jobs:
           files: ./coverage/lcov.info
           token: ${{ secrets.CODECOV_TOKEN }}
           verbose: false
-  benchmark:
-    name: Benchmark
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: Install pnpm
-        run: npm install -g pnpm@9
-      - uses: actions/setup-node@1d0ff469b7ec7b3cb9d8673fde0c81c44821de2a # v4.2.0
-        with:
-          node-version: 20
-          cache: 'pnpm'
-      - name: Install dependencies
-        run: pnpm install
-      - name: Run benchmark
-        run: pnpm run test:bench
