--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,7 +78,7 @@ jobs:
           KEYCHAIN_PATH: ${{ runner.temp }}/app-signing.keychain-db
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          pnpm run publish:mac-arm64
+          cd apps/ui-tars && pnpm run publish:mac-arm64
       - name: publish x64
         if: matrix.os == 'macos-13'
         env:
@@ -88,7 +88,7 @@ jobs:
           KEYCHAIN_PATH: ${{ runner.temp }}/app-signing.keychain-db
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          pnpm run publish:mac-x64
+          cd apps/ui-tars && pnpm run publish:mac-x64
 
   publish_on_win:
     runs-on: windows-latest
@@ -109,4 +109,4 @@ jobs:
       - name: publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: pnpm run publish:win32
+        run: cd apps/ui-tars && pnpm run publish:win32
