--- a/apps/ui-tars/package.json
+++ b/apps/ui-tars/package.json
@@ -7,7 +7,6 @@
   "description": "A GUI Agent application based on UI-TARS(Vision-Lanuage Model) that allows you to control your computer using natural language.",
   "author": "ByteDance",
   "scripts": {
-    "commit": "oco",
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --pretty --composite false",
@@ -54,15 +53,15 @@
   },
   "dependencies": {
     "sharp": "0.33.3",
-    "@computer-use/mac-screen-capture-permissions": "^1.0.2",
-    "@computer-use/node-mac-permissions": "2.2.2",
-    "@computer-use/nut-js": "^4.2.0"
+    "@computer-use/mac-screen-capture-permissions": "^1.0.2"
   },
   "devDependencies": {
+    "@computer-use/node-mac-permissions": "2.2.2",
+    "@computer-use/nut-js": "^4.2.0",
+    "@ui-tars/operator-nut-js": "workspace:*",
     "source-map-support": "^0.5.21",
     "@electron-toolkit/utils": "^3.0.0",
     "@ui-tars/sdk": "workspace:*",
-    "@ui-tars/operator-nut-js": "workspace:*",
     "@ui-tars/action-parser": "workspace:*",
     "@ui-tars/shared": "workspace:*",
     "@ui-tars/utio": "workspace:*",
@@ -77,6 +76,7 @@
     "ms": "^2.1.3",
     "update-electron-app": "^3.1.0",
     "zustand": "^5.0.0",
+    "@electron-forge/shared-types": "^7.7.0",
     "@electron-forge/cli": "^7.7.0",
     "@electron-forge/maker-dmg": "^7.7.0",
     "@electron-forge/maker-pkg": "^7.7.0",
