--- a/apps/ui-tars/package.json
+++ b/apps/ui-tars/package.json
@@ -52,16 +52,12 @@
     }
   },
   "dependencies": {
-    "sharp": "0.33.3",
-    "@computer-use/mac-screen-capture-permissions": "^1.0.2"
-  },
-  "devDependencies": {
+    "@computer-use/mac-screen-capture-permissions": "^1.0.2",
     "@computer-use/node-mac-permissions": "2.2.2",
     "@computer-use/nut-js": "^4.2.0",
-    "@ui-tars/operator-nut-js": "workspace:*",
-    "source-map-support": "^0.5.21",
     "@electron-toolkit/utils": "^3.0.0",
     "@ui-tars/sdk": "workspace:*",
+    "@ui-tars/operator-nut-js": "workspace:*",
     "@ui-tars/action-parser": "workspace:*",
     "@ui-tars/shared": "workspace:*",
     "@ui-tars/utio": "workspace:*",
@@ -74,8 +70,12 @@
     "electron-store": "^10.0.0",
     "js-yaml": "^4.1.0",
     "ms": "^2.1.3",
+    "sharp": "0.33.3",
+    "source-map-support": "^0.5.21",
     "update-electron-app": "^3.1.0",
-    "zustand": "^5.0.0",
+    "zustand": "^5.0.0"
+  },
+  "devDependencies": {
     "@electron-forge/shared-types": "^7.7.0",
     "@electron-forge/cli": "^7.7.0",
     "@electron-forge/maker-dmg": "^7.7.0",
