--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^20.14.8",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "@vitest/coverage-v8": "^3.0.8",
     "@vitest/coverage-istanbul": "^3.0.3",
     "cross-env": "^7.0.3",
     "electron-playwright-helpers": "^1.7.1",
