fix: electron build issue & tweak sdk snapshot quality (#188)

--- a/packages/common/electron-build/package.json
+++ b/packages/common/electron-build/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "@ui-tars/action-parser",
-  "version": "1.2.0-beta.21",
-  "description": "Action parser SDK for UI-TARS",
+  "name": "@common/electron-build",
+  "version": "1.0.0",
+  "private": true,
+  "description": "Electron build toolkits",
   "repository": {
     "type": "git",
     "url": "https://github.com/bytedance/UI-TARS-desktop"
@@ -11,19 +12,21 @@
   },
   "keywords": [
     "AI",
-    "Action",
-    "Parser",
+    "SDK",
+    "Operator",
     "UI-TARS"
   ],
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "sideEffects": false,
   "scripts": {
     "dev": "rslib build --watch",
+    "prepare": "npm run build",
     "build": "rslib build",
     "build:watch": "rslib build --watch",
-    "prepare": "npm run build",
-    "test": "vitest"
+    "test:browser": "vitest --environment happy-dom",
+    "test": "vitest --environment happy-dom && vitest --environment node"
   },
   "license": "Apache-2.0",
   "files": [
@@ -34,11 +37,12 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
-    "@ui-tars/shared": "workspace:*"
+    "flora-colossus": "2.0.0",
+    "@common/configs": "workspace:*"
   },
   "devDependencies": {
+    "tsx": "^4.19.2",
     "@rslib/core": "^0.5.4",
-    "@common/configs": "workspace:*",
     "typescript": "^5.7.2",
     "vitest": "^3.0.2"
   }
