--- a/packages/ui-tars/cli/package.json
+++ b/packages/ui-tars/cli/package.json
@@ -43,7 +43,7 @@
   },
   "devDependencies": {
     "@rslib/core": "^0.5.4",
-    "@ui-tars/configs": "workspace:*",
+    "@common/configs": "workspace:*",
     "@types/js-yaml": "^4.0.9",
     "typescript": "^5.7.2",
     "vitest": "^3.0.2"
