--- a/packages/ui-tars/electron-ipc/package.json
+++ b/packages/ui-tars/electron-ipc/package.json
@@ -47,7 +47,7 @@
   "devDependencies": {
     "electron": "^30.0.0",
     "@rslib/core": "^0.5.4",
-    "@ui-tars/configs": "workspace:*",
+    "@common/configs": "workspace:*",
     "typescript": "^5.7.2",
     "vitest": "^3.0.2"
   },
