--- a/packages/ui-tars/operators/browserbase/package.json
+++ b/packages/ui-tars/operators/browserbase/package.json
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "@ui-tars/sdk": "workspace:*",
-    "@ui-tars/configs": "workspace:*",
+    "@common/configs": "workspace:*",
     "@rslib/core": "^0.5.4",
     "typescript": "^5.7.2",
     "vitest": "^3.0.2",
