--- a/apps/ui-tars/package.json
+++ b/apps/ui-tars/package.json
@@ -60,6 +60,7 @@
     "@computer-use/nut-js": "^4.2.0",
     "@ui-tars/operator-nut-js": "workspace:*",
     "@electron-toolkit/utils": "^3.0.0",
+    "@common/electron-build": "workspace:*",
     "@ui-tars/sdk": "workspace:*",
     "@ui-tars/action-parser": "workspace:*",
     "@ui-tars/shared": "workspace:*",
@@ -75,6 +76,7 @@
     "ms": "^2.1.3",
     "update-electron-app": "^3.1.0",
     "zustand": "^5.0.0",
+    "@electron-forge/plugin-base": "^7.7.0",
     "@electron-forge/shared-types": "^7.7.0",
     "@electron-forge/cli": "^7.7.0",
     "@electron-forge/maker-dmg": "^7.7.0",
