--- a/packages/ui-tars/sdk/package.json
+++ b/packages/ui-tars/sdk/package.json
@@ -67,7 +67,7 @@
   "devDependencies": {
     "tsx": "^4.19.2",
     "@rslib/core": "^0.5.4",
-    "@ui-tars/configs": "workspace:*",
+    "@common/configs": "workspace:*",
     "typescript": "^5.7.2",
     "vitest": "^3.0.2",
     "react": "^18.3.1",
