fix(app): electron build error (#199)

--- a/apps/omega/package.json
+++ b/apps/omega/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "open-agent-app",
+  "name": "agent-tars-app",
   "version": "1.0.0",
   "description": "An Electron application with React and TypeScript",
   "main": "./dist/main/index.js",
@@ -10,10 +10,11 @@
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
+    "asar:analyze": "asar extract out/Agent\\ TARS-darwin-arm64/Agent\\ TARS.app/Contents/Resources/app.asar ./dist/asar",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
     "package": "electron-forge package",
-    "build": "npm run typecheck && npm run build:reporter && electron-vite build && DEBUG=1 electron-forge make",
+    "build": "npm run typecheck && npm run build:reporter && electron-vite build && electron-forge make",
     "test": "vitest run",
     "publish:mac": "electron-vite build && electron-forge publish --arch=universal --platform=darwin",
     "build:reporter": "vite build"
@@ -40,18 +41,38 @@
     "@agent-infra/mcp-server-browser": "workspace:*"
   },
   "devDependencies": {
-    "@electron-forge/cli": "7.7.0",
-    "@electron-forge/maker-deb": "7.7.0",
-    "@electron-forge/maker-dmg": "7.7.0",
-    "@electron-forge/maker-rpm": "7.7.0",
-    "@electron-forge/maker-squirrel": "7.7.0",
-    "@electron-forge/maker-zip": "7.7.0",
-    "@electron-forge/plugin-auto-unpack-natives": "7.7.0",
-    "@electron-forge/plugin-fuses": "7.7.0",
-    "@electron-forge/plugin-vite": "7.7.0",
-    "@electron-forge/publisher-github": "7.7.0",
+    "@modelcontextprotocol/sdk": "^1.7.0",
+    "@electron-toolkit/preload": "^3.0.1",
+    "@electron-toolkit/utils": "^4.0.0",
+    "@electron/asar": "^3.2.18",
+    "update-electron-app": "^3.1.0",
+    "openai": "^4.86.2",
+    "dotenv": "16.4.7",
+    "@agent-infra/shared": "workspace:*",
+    "@agent-infra/mcp-client": "workspace:*",
+    "@agent-infra/search": "workspace:*",
+    "ws": "8.18.1",
+    "utf-8-validate": "6.0.5",
+    "bufferutil": "4.0.9",
+    "fs-extra": "11.3.0",
+    "@anthropic-ai/sdk": "0.39.0",
+    "@google/generative-ai": "0.24.0",
+    "@mistralai/mistralai": "1.5.1",
+    "@ui-tars/electron-ipc": "workspace:*",
+    "@common/electron-build": "workspace:*",
+    "@electron-forge/cli": "^7.7.0",
+    "@electron-forge/maker-deb": "^7.7.0",
+    "@electron-forge/maker-dmg": "^7.7.0",
+    "@electron-forge/maker-rpm": "^7.7.0",
+    "@electron-forge/maker-squirrel": "^7.7.0",
+    "@electron-forge/maker-zip": "^7.7.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.7.0",
+    "@electron-forge/plugin-fuses": "^7.7.0",
+    "@electron-forge/plugin-vite": "^7.7.0",
+    "@electron-forge/publisher-github": "^7.7.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@types/node": "^22.13.4",
+    "@types/fs-extra": "11.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "10.4.20",
     "electron": "34.1.1",
