--- a/apps/omega/src/renderer/package.json
+++ b/apps/omega/src/renderer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "open-agent-renderer",
   "dependencies": {
-    "@ui-tars/electron-ipc": "^1.2.3",
+    "@ui-tars/electron-ipc": "workspace:*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "@nextui-org/react": "2.4.8",
@@ -40,6 +40,7 @@
     "path-browserify": "1.0.1"
   },
   "devDependencies": {
+    "@modelcontextprotocol/sdk": "^1.7.0",
     "typescript": "^5.7.3",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
