--- a/packages/agent-infra/mcp-servers/browser/tsconfig.json
+++ b/packages/agent-infra/mcp-servers/browser/tsconfig.json
@@ -7,11 +7,10 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "outDir": "./dist",
-    "rootDir": ".",
     "declaration": true,
     "moduleResolution": "NodeNext",
     "module": "NodeNext"
   },
-  "include": ["./**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
