--- a/apps/omega/tsconfig.json
+++ b/apps/omega/tsconfig.json
@@ -2,10 +2,11 @@
   "files": [],
   "references": [
     { "path": "./tsconfig.node.json" },
-    { "path": "./tsconfig.web.json" },
+    { "path": "./tsconfig.web.json" }
   ],
   "compilerOptions": {
+    "target": "ES2020",
     "resolveJsonModule": true,
-    "esModuleInterop": true,
+    "esModuleInterop": true
   }
 }
