--- a/packages/agent-infra/mcp-servers/commands/package.json
+++ b/packages/agent-infra/mcp-servers/commands/package.json
@@ -3,20 +3,20 @@
   "version": "0.0.1",
   "description": "An MCP server to run arbitrary commands",
   "type": "module",
-  "main": "./build/server.js",
-  "module": "./build/server.js",
-  "types": "./build/server.d.ts",
+  "main": "./dist/server.cjs",
+  "module": "./dist/server.js",
+  "types": "./dist/server.d.ts",
   "bin": {
-    "mcp-server-commands": "./build/index.js"
+    "mcp-server-commands": "./dist/index.cjs"
   },
   "files": [
-    "build"
+    "dist"
   ],
   "scripts": {
     "clean": "rm -rf build",
-    "build": "rm -rf build && tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
+    "build": "rm -rf build && rslib build && shx chmod +x dist/*.{js,cjs}",
     "prepare": "npm run build",
-    "watch": "npm run build && tsc --watch",
+    "watch": "npm run build && rslib build --watch",
     "dev": "npx -y @modelcontextprotocol/inspector tsx src/index.ts",
     "inspector": "npx @modelcontextprotocol/inspector build/index.js",
     "test": "vitest run",
@@ -28,7 +28,9 @@
   },
   "devDependencies": {
     "tsx": "^4.19.3",
+    "@rslib/core": "0.5.3",
     "zod": "^3.23.8",
+    "shx": "^0.3.4",
     "vitest": "^3.0.7",
     "@types/node": "^20.11.24",
     "typescript": "^5.7.3"
