--- a/packages/agent-infra/mcp-servers/commands/tsconfig.json
+++ b/packages/agent-infra/mcp-servers/commands/tsconfig.json
@@ -4,7 +4,6 @@
     "module": "Node16",
     "moduleResolution": "Node16",
     "outDir": "./build",
-    "rootDir": "./src",
     "declaration": true,
     "strict": true,
     "esModuleInterop": true,
@@ -12,5 +11,5 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
