--- a/.github/workflows/release-agent-tars.yml
+++ b/.github/workflows/release-agent-tars.yml
@@ -1,4 +1,4 @@
-name: Release app
+name: Release Agent-TARS app
 on:
   # push:
   #   branches:
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest, macos-13]
+        os: [macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -70,7 +70,6 @@ jobs:
       - name: install dependencies
         run: pnpm install
       - name: publish arm64
-        if: matrix.os == 'macos-latest'
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
@@ -78,35 +77,25 @@ jobs:
           KEYCHAIN_PATH: ${{ runner.temp }}/app-signing.keychain-db
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          cd apps/ui-tars && pnpm run publish:mac-arm64
-      - name: publish x64
-        if: matrix.os == 'macos-13'
-        env:
-          APPLE_ID: ${{ secrets.APPLE_ID }}
-          APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
-          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-          KEYCHAIN_PATH: ${{ runner.temp }}/app-signing.keychain-db
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          cd apps/ui-tars && pnpm run publish:mac-x64
+          cd apps/omega && pnpm run publish:mac
 
-  publish_on_win:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: Show operating system info
-        run: |
-          echo "Operating System:"
-          cmd /c ver
-      - name: Install pnpm
-        run: npm install -g pnpm@9
-      - uses: actions/setup-node@1d0ff469b7ec7b3cb9d8673fde0c81c44821de2a # v4.2.0
-        with:
-          node-version: 20
-          cache: 'pnpm'
-      - name: install dependencies
-        run: pnpm install
-      - name: publish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: cd apps/ui-tars && pnpm run publish:win32
+  # publish_on_win:
+  #   runs-on: windows-latest
+  #   steps:
+  #     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+  #     - name: Show operating system info
+  #       run: |
+  #         echo "Operating System:"
+  #         cmd /c ver
+  #     - name: Install pnpm
+  #       run: npm install -g pnpm@9
+  #     - uses: actions/setup-node@1d0ff469b7ec7b3cb9d8673fde0c81c44821de2a # v4.2.0
+  #       with:
+  #         node-version: 20
+  #         cache: 'pnpm'
+  #     - name: install dependencies
+  #       run: pnpm install
+  #     - name: publish
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       run: cd apps/omega && pnpm run publish:win32
