--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Cache turbo
+        uses: actions/cache@d4323d4df104b026a6aa633fdb11d772146be0bf
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+
       - name: Install pnpm
         run: npm install -g pnpm@9
       - uses: actions/setup-node@1d0ff469b7ec7b3cb9d8673fde0c81c44821de2a # v4.2.0
@@ -37,9 +46,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Run typecheck
-        run: cd apps/ui-tars && pnpm run typecheck
+        run: npm exec turbo run typecheck
       - name: Run test
-        run: pnpm run coverage
+        run: npm exec turbo run coverage
       - name: Upload coverage data
         uses: codecov/codecov-action@13ce06bfc6bbe3ecf90edbbf1bc32fe5978ca1d3 # v5.3.1
         with:
