--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "author": "ByteDance",
   "scripts": {
     "commit": "oco",
+    "dev:ui-tars": "turbo run ui-tars-desktop#dev",
+    "dev:agent-tars": "turbo run agent-tars-app#dev",
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
     "test": "vitest",
@@ -18,6 +20,7 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "turbo": "^2.4.4",
     "@changesets/cli": "^2.27.11",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
